# vulkan-strategy-game

./: CMakeLists.txt  README.md  main.cpp
src/: common.hpp  main.cpp  memory.cpp  memory.hpp  platform.cpp  platform.hpp  render.cpp  render.hpp  render_pipeline.hpp  shader_compile.cpp  shader_compile.hpp  test.cpp  text_atlas.cpp  text_atlas.hpp  text_format_caps.hpp  text_render.cpp  text_render.hpp
tests/: CMakeLists.txt
tests/auto_tests/: shader_compile_options.cpp  version.cpp
tests/visual_tests/: black_screen.cpp  hello_world.cpp  text_atlas_build.cpp  triangle.cpp  triangle_dynamic.cpp
